# passman

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Taskfile.yml  go.mod  go.sum  main.go  wails.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
cmd/passman-cli/: main.go
docs/: architecture.md  component-reference.md  data-flow.md  format.md
fixtures/buttercup/: sample.bcup
frontend/: package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: PasswordGenerator.svelte  TagContextMenu.svelte  Tree.svelte  TreeItem.svelte
frontend/src/stores/: contextMenu.js  toast.js
frontend/src/styles/: _colors.scss  _modal.scss  var.scss
internal/app/: entry_service.go  group_service.go  password_service.go  vault_service.go
internal/config/: config.go
internal/state/: state.go
internal/vimport/: import.go
passman-app/: README.md  index.html  package.json  vite.config.js
passman-app/src/: App.svelte  app.css  main.js
passman-app/src-tauri/: Cargo.toml  tauri.conf.json
passman-app/src-tauri/capabilities/: default.json
passman-app/src-tauri/icons/: generate_icons.py  icon.icns
passman-app/src-tauri/src/: main.rs
passman-app/src-tauri/src/commands/: dto.rs  entry_commands.rs  group_commands.rs  mod.rs  password.rs  state.rs  vault_commands.rs
passman-app/src/components/: AddGroupDialog.svelte  AutoLock.svelte  CreateVaultDialog.svelte  CustomFieldDisplay.svelte  DeleteGroupDialog.svelte  EntryContextMenu.svelte  EntryDetails.svelte  EntryEditor.svelte  EntryList.svelte  GroupList.svelte  GroupTagContextMenu.svelte  GroupVaultMoveDialog.svelte  ImportButtercupDialog.svelte  MoveCopySubmenu.svelte  OpenVaultMenu.svelte  PasswordGenerator.svelte  RemoveVaultDialog.svelte  Tabs.svelte  TagContextMenu.svelte  TagManager.svelte  ThemeToggle.svelte  Toast.svelte  Tree.svelte  TreeItem.svelte  UnlockDialog.svelte  VaultContextMenu.svelte  VaultList.svelte  (+4 more)
passman-cli/: Cargo.toml
passman-cli/fixtures/buttercup/: trash.bcup
passman-cli/src/: main.rs
passman-cli/tests/: import_tests.rs  keepass_tests.rs
passman-core/: Cargo.toml
passman-core/src/: buttercup.rs  config.rs  crypto.rs  import.rs  lib.rs  vault.rs  vault_operations.rs
passman-core/src/buttercup/: decrypt.rs  format_a.rs  mod.rs  parse.rs  types.rs
passman-core/src/keepass/: mod.rs
passman-core/src/vault/: format.rs  mod.rs  types.rs
passman-core/tests/: buttercup_tests.rs
pkg/buttercup/: buttercup.go  decrypt.go  format_a.go  parse.go  types.go
pkg/crypto/: crypto.go
pkg/keepass/: keepass.go
pkg/vault/: format.go  operations.go  types.go  vault.go  vault_test.go
(+142 files in other folders)
