[workspace]
members = ["passman-core", "passman-app/src-tauri", "passman-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Passman Contributors"]
license = "MIT"
repository = "https://github.com/eqto/passman"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
