[package]
name = "passman-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Passman CLI import/export tools"

[[bin]]
name = "passman-cli"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
chrono = "0.4"

passman-core = { path = "../passman-core" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = { workspace = true }
keepass = { version = "0.13", features = ["save_kdbx4"] }
