[package]
name = "passman-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core library for Passman vault encryption and management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.8"
base64 = "0.22"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
flate2 = "1.0"
hex = "0.4"
keepass = "0.13"

[dev-dependencies]
tempfile = "3"
